Calendario Diario: > Creacion de eventos seleccionando proyecto > Fix caida al no seleccionar proyecto > se agrega jquery.visible.js para manejar objetos que no estan dentro del screen > mejora a webcal.js > Actualizacion de AccesoAcl con roles actuales

--- a/public/css/custom-timetable.css
+++ b/public/css/custom-timetable.css
@@ -640,6 +640,7 @@
 .timetable .week-view th {
 	color: #008fd5;
     text-align: center;
+    min-width: 120px;
 }
 .timetable .week-view td:first-child i {
 	color: #008fd5;
@@ -680,6 +681,7 @@
 
 .td-time {
   width: 0% !important;
+  min-width: 0px !important;
   padding: 5px;
   padding-left: 3px !important;
   padding-right: 3px !important;
